packages/isar_generator/test/errors/id/missing.dart
// no int property named "id"

import 'package:isar/isar.dart';

@Collection()
class Test {
  late String name;
}
